[gd_scene load_steps=3 format=3 uid="uid://d1k3e0lthweoo"]

[ext_resource type="Script" path="res://source/actors/CameraMain.gd" id="1_vtafx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nupaa"]
size = Vector2(720, 720)

[node name="CameraMain" type="Camera2D"]
anchor_mode = 0
script = ExtResource("1_vtafx")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(640, 360)
shape = SubResource("RectangleShape2D_nupaa")

[node name="Guide50px" type="ColorRect" parent="."]
visible = false
z_index = 3
offset_left = 330.0
offset_top = 50.0
offset_right = 950.0
offset_bottom = 670.0
color = Color(1, 1, 1, 0.305882)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
